# image-survey

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
backend/: Cargo.toml
backend/migrations/: 20220115081205_init.down.sql  20220115081205_init.up.sql
backend/src/: auth.rs  fail.rs  main.rs
backend/src/entity/: meta.rs  mod.rs  options.rs  prelude.rs  questions.rs  tokens.rs  users.rs  votes.rs
backend/src/fairings/: database.rs  logger.rs  mod.rs
docs/vault/: dev.get-started.md  root.md
etc/: image-survey.sample.yaml
image-files/: README.md
image_survey/: __init__.py  admin.py  auth.py  db.py  imagesets.py  main.py
misc/: lint.sh  setup.sh
tests/: test_api.py  test_db.py  test_imagesets.py
ui/: .env  package-lock.json  package.json  tsconfig.json
ui/public/: index.html
ui/src/: Admin.js  Admin.tsx  App.js  BackButton.js  BackButton.tsx  Comparison.js  Comparison.tsx  ErrorMsg.js  ErrorMsg.tsx  Home.js  api.js  api.ts  index.js  index.scss
