[tool.poetry]
name = "image-survey"
version = "0.1.0"
description = "Run image comparison surveys."
authors = ["Kaan Genc <py@kaangenc.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://imagesurvey.kaangenc.me/"
repository = "https://github.com/SeriousBug/image-survey"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
sanic = "^21.3.2"
sanic-jwt = "^1.6.0"
sanic-limiter = "^0.1.3"
aiosqlite = "^0.17.0"
Sanic-Cors = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
isort = "^5.8.0"
unimport = "^0.8.3"
ward = "^0.52.0-beta.0"
httpx = "^0.17.1"
coverage = "^5.5"
sanic-testing = "^0.3.1"
rope = "^0.19.0"

[tool.poetry.scripts]
image-survey = "image_survey.main:main"

[tool.black]
line-length = 120

[tool.pylint.messages_control]
disable = "C0330, C0326, C0116, C0115, C0114, R0903, W1203, W0511, W0707"
enable = "W1202, W1201"

[tool.pylint.format]
max-line-length = "120"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ward]
path = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
