[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
rocket = {version = "^0.5.0-rc.1", features = ["json"]}
rocket_contrib = {version = "^0.4.10", default-features = false, features = ["json"]}
# Logging
tracing = "^0.1"
tracing-subscriber = "^0.3.6"
tracing-unwrap = { version = "^0.9", default-features = false }
# Database
sea-orm = { version = "^0.5.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ], default-features = false}
sea-orm-rocket = "^0.5.0"
# load .env files and env vars
dotenv = "^0.15.0"
# Serialization
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"